file-specific parameters update

--- a/GUI/ChangeParametersWindow.xaml
+++ b/GUI/ChangeParametersWindow.xaml
@@ -1,74 +1,75 @@
-﻿<Window x:Class="MetaMorpheusGUI.ChangeParametersWindow"
+﻿<Window x:Class="MetaMorpheusGUI.ChangeFileSpecificParametersWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="ChangeParametersWindow" Height="700" Width="500" WindowStartupLocation="CenterScreen">
+        Title="File-Specific Parameters" Height="400" Width="500" WindowStartupLocation="CenterScreen">
     <StackPanel>
-        <DataGrid x:Name="ParameterGrid" ItemsSource="{Binding UpdateSourceTrigger=LostFocus, Mode=OneWay}" AlternatingRowBackground="LightGray" AlternationCount="2">
-            <DataGrid.Resources>
-                <Style TargetType="DataGridCell">
-                    <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick" />
-                </Style>
-                <local:TheTemplateSelector x:Key="templateSelector">
-                    <local:TheTemplateSelector.ComboBoxProtease>
-                        <DataTemplate>
-                            <ComboBox Name="ComboBoxProtease" Width="81" ItemsSource="{Binding ProtList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}" />
-                        </DataTemplate>
-                    </local:TheTemplateSelector.ComboBoxProtease>
-                    <local:TheTemplateSelector.ComboBoxTolerance>
-                        <DataTemplate>
-                            <ComboBox Name="ComboBoxTolerance" Width="81" ItemsSource="{Binding ProductMassToleranceList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}" />
-                        </DataTemplate>
-                    </local:TheTemplateSelector.ComboBoxTolerance>
-                    <local:TheTemplateSelector.ComboBoxInit>
-                        <DataTemplate>
-                            <ComboBox Name="ComboBoxInit" Width="81" ItemsSource="{Binding InitList}" SelectedIndex="{Binding Value, UpdateSourceTrigger=LostFocus}" />
-                        </DataTemplate>
-                    </local:TheTemplateSelector.ComboBoxInit>
-                    <local:TheTemplateSelector.TextBox>
-                        <DataTemplate>
-                            <TextBox Text="{Binding Value, UpdateSourceTrigger=LostFocus, Mode=TwoWay}"
-
-                         Foreground="Black"
-                         TextAlignment="Center"
-                         IsReadOnly="False" />
-                        </DataTemplate>
-                    </local:TheTemplateSelector.TextBox>
-                    <local:TheTemplateSelector.Bool>
-                        <DataTemplate>
-                            <CheckBox HorizontalAlignment="Center" IsChecked="{Binding Value, UpdateSourceTrigger=LostFocus }" />
-                        </DataTemplate>
-                    </local:TheTemplateSelector.Bool>
-                </local:TheTemplateSelector>
-            </DataGrid.Resources>
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Parameter Name"  Width="12*" Binding="{Binding ParamName, Mode=OneWay}" />
-                <DataGridTemplateColumn CellTemplateSelector="{StaticResource templateSelector}" Header="Value" Width ="12*" IsReadOnly="True" />
-                <DataGridTemplateColumn Header="Unset">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Click="Unset">Unset</Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridCheckBoxColumn Header="Different in Selected Files"  Width ="10*" Binding="{Binding Different}" IsReadOnly="True" />
-            </DataGrid.Columns>
-            <Style  TargetType="{x:Type DataGridColumnHeader}">
-                <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick" />
-                <Setter Property="Background" Value="Orange" />
-                <Setter Property="FontSize" Value="20" />
-                <Setter Property="Padding" Value="5" />
-                <Setter Property="BorderBrush" Value="Red" />
-                <Setter Property="BorderThickness" Value="0 0 3 0" />
-            </Style>
-        </DataGrid>
+        <Label Content="Enabled?"/>
+        <!-- File-specific Precursor Tolerance -->
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,8">
+            <CheckBox x:Name="fileSpecificPrecursorMassTolEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False" />
+            <Label Content="Precursor Mass Tolerance" Width="150" Margin="20,0,0,0" IsEnabled="{Binding IsChecked, ElementName=fileSpecificPrecursorMassTolEnabled}" />
+            <TextBox x:Name="precursorMassToleranceTextBox" Height="26" Width="45" HorizontalAlignment="Left" TextWrapping="Wrap" IsEnabled="{Binding IsChecked, ElementName=fileSpecificPrecursorMassTolEnabled}" />
+            <ComboBox x:Name="precursorMassToleranceComboBox" Height="26" HorizontalAlignment="Left" IsEnabled="{Binding IsChecked, ElementName=fileSpecificPrecursorMassTolEnabled}"  />
+        </StackPanel>
+        <!-- File-specific Product Tolerance -->
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,8">
+            <CheckBox x:Name="fileSpecificProductMassTolEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False" />
+            <Label Content="Product Mass Tolerance" Width="150"  Margin="20,0,0,0" IsEnabled="{Binding IsChecked, ElementName=fileSpecificProductMassTolEnabled}"  />
+            <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45" IsEnabled="{Binding IsChecked, ElementName=fileSpecificProductMassTolEnabled}" />
+            <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" IsEnabled="{Binding IsChecked, ElementName=fileSpecificProductMassTolEnabled}"  />
+        </StackPanel>
+        <!-- File-specific Protease -->
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,8">
+            <CheckBox x:Name="fileSpecificProteaseEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False"  />
+            <Label x:Name="fileSpecificProteaseLabel" Margin="20,0,0,0"  Content="Protease" IsEnabled="{Binding IsChecked, ElementName=fileSpecificProteaseEnabled}" />
+            <ComboBox x:Name="fileSpecificProtease" IsEnabled="{Binding IsChecked, ElementName=fileSpecificProteaseEnabled}"/>
+        </StackPanel>
+        <!-- File-specific Min Peptide Length -->
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,8">
+            <CheckBox x:Name="fileSpecificMinPeptideLengthEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False"  />
+            <Label x:Name="lblMinPeptideLength" Margin="20,0,0,0" Width="100" Content="Min Peptide Len" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMinPeptideLengthEnabled}" />
+            <TextBox x:Name="txtMinPeptideLength" Width="45" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMinPeptideLengthEnabled}" />
+        </StackPanel>
+        <!-- File-specific Max Peptide Length -->
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,8">
+            <CheckBox x:Name="fileSpecificMaxPeptideLengthEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False"  />
+            <Label x:Name="lblMaxPeptideLength" Margin="20,0,0,0" Width="100"  Content="Max Peptide Len" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMaxPeptideLengthEnabled}" />
+            <TextBox x:Name="txtMaxPeptideLength" Width="45" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMaxPeptideLengthEnabled}" />
+        </StackPanel>
+        <!-- File-specific Max Missed Cleavages -->
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,8">
+            <CheckBox x:Name="fileSpecificMissedCleavagesEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False"  />
+            <Label x:Name="maxMissedCleavagesLabel" Margin="20,0,0,0" Width="130" Content="Max Missed Cleavages" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMissedCleavagesEnabled}"  />
+            <TextBox x:Name="missedCleavagesTextBox" Width="45" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMissedCleavagesEnabled}" />
+        </StackPanel>
+        <!-- File-specific Max Mods per Peptide -->
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,8">
+            <CheckBox x:Name="fileSpecificMaxModNumEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False"  />
+            <Label x:Name="lbMaxModNum" Margin="20,0,0,0" Width="130" Content="Max mods per peptide" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMaxModNumEnabled}" />
+            <TextBox x:Name="txtMaxModNum" Width="45" IsEnabled="{Binding IsChecked, ElementName=fileSpecificMaxModNumEnabled}" />
+        </StackPanel>
+        <!-- File-specific Ion Types -->
+        <StackPanel Grid.Column="1" Margin="10,0,0,8">
+            <StackPanel Orientation="Horizontal" Margin="0">
+                <CheckBox x:Name="fileSpecificIonTypesEnabled" Margin="10,0,0,0" VerticalAlignment="Center" IsChecked="False"  />
+                <Label x:Name="ionsToSearchLabel" Margin="21,0,0,0" Content="Ions to search" IsEnabled="{Binding IsChecked, ElementName=fileSpecificIonTypesEnabled}" />
+                <CheckBox x:Name="bCheckBox" VerticalAlignment="Center" Width="70" Content="b ions" IsEnabled="{Binding IsChecked, ElementName=fileSpecificIonTypesEnabled}" />
+                <CheckBox x:Name="yCheckBox" VerticalAlignment="Center" Width="70" Content="y ions" IsEnabled="{Binding IsChecked, ElementName=fileSpecificIonTypesEnabled}" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="130,0,0,0">
+                <CheckBox x:Name="cCheckBox" VerticalAlignment="Center" Width="70" Content="c ions" IsEnabled="{Binding IsChecked, ElementName=fileSpecificIonTypesEnabled}" />
+                <CheckBox x:Name="zdotCheckBox" VerticalAlignment="Center" Width="70" Content="zdot ions" IsEnabled="{Binding IsChecked, ElementName=fileSpecificIonTypesEnabled}" />
+            </StackPanel>
+        </StackPanel>
+        <!-- Save/cancel buttons -->
         <DockPanel>
             <Frame DockPanel.Dock="Bottom" />
-            <Button x:Name="Save" Content="Save File Specific Settings" Click="Save_Click" FontSize="25" Grid.Row="3" />
-            <Button x:Name="Cancel" Content="Cancel" Click="Cancel_Click" FontSize="15" Grid.Row="3" />
+            <Button x:Name="Save" Margin="10,5,2,2" Width="300" Content="Save File Specific Settings" Click="Save_Click" FontSize="25" Grid.Row="3" />
+            <Button x:Name="Cancel" Margin="10" Width="100" Content="Cancel" Click="Cancel_Click" FontSize="15" Grid.Row="3" />
         </DockPanel>
     </StackPanel>
 </Window>
